fix: bring modal to the top using z-index fix: adjust circle1 position at breakpoint

--- a/styles/icon.css
+++ b/styles/icon.css
@@ -157,7 +157,7 @@
 @media screen and (max-width: 840px) {
     .circle1 {
         width: 6rem;
-        top: 4rem;
+        top: 5rem;
     }
 
     .bulb2 {
