--- a/styles/style.css
+++ b/styles/style.css
@@ -241,6 +241,7 @@ main {
     align-items: center;
     background-color: rgba(18, 27, 39, 0.7);
     height: 100vh;
+    z-index: 1;
     position: fixed;
     width: 100%;
     height: 100%;
